add new layer w/ updated speed threshold

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <script>
 L.mapbox.accessToken = 'pk.eyJ1IjoiZmNjIiwiYSI6InBiaGMyLU0ifQ.LOmVYpUCFv2yWpbvxDdQNg';
-var map = L.mapbox.map('map', 'fcc.al3w5t25', {
+var map = L.mapbox.map('map', 'fcc.c2bloavf', {
 	maxZoom: 10,
 	minZoom: 4,
     legendControl: {
@@ -31,7 +31,7 @@ var map = L.mapbox.map('map', 'fcc.al3w5t25', {
 }).setView([38.00, -98.00], 4);
 
 // top layer (always on)
-L.mapbox.tileLayer('fcc.al3w5t25', {
+L.mapbox.tileLayer('fcc.c2bloavf', {
 	maxZoom: 10,
 	minZoom: 4
 }).setZIndex(1000).addTo(map);
